myK8S/media/readarr/readarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - name: readarr
          image: lscr.io/linuxserver/readarr:latest
          ports:
            - containerPort: 8787
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads-pvc
