myK8S/media/readarr/readarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr-svc
  namespace: media
spec:
  selector:
    app: readarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8787
